# voxelize_navmesh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bake_tcbin.py  blender.tcbin  environment.yml  export_obj.py  navmesh.py  navmesh_bridge.cpp  query_path.py  recast_cli.cpp  reorient_obj.py  simulate_crowd.py  view_navmesh.py  voxel_navmesh.py
src/pointcloud_voxelizer/: CMakeLists.txt  map_subtraction_analysis.md  package.xml
src/pointcloud_voxelizer/launch/: voxelizer.launch.py
src/pointcloud_voxelizer/param/: voxelizer.yaml
src/pointcloud_voxelizer/rviz/: voxelizer.rviz
src/pointcloud_voxelizer/src/: voxelizer_node.cpp
src/voxnav/: CMakeLists.txt  package.xml  setup.bash  setup.py
src/voxnav/launch/: navmesh_baker.launch.py  simulate_crowd.launch.py  simulate_crowd_cosim.launch.py  simulate_obstacle_cosim.launch.py  test_cosim.launch.py
src/voxnav/voxnav/: __init__.py  _bridge_loader.py  _coords.py  _ctypes_bindings.py  baker_backend.py  crowd.py  fake_robot_pose.py  navmesh.py  navmesh_baker.py  navmesh_baker_app.py  navmesh_bridge.cpp  navmesh_core.py  navmesh_query.py  project_io.py  recast_config.py  simulate_crowd.py  simulate_crowd_cosim.py  simulate_obstacle_cosim.py  tile_cache.py  ui_mainwindow.py  viewer_controller.py
