<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_voxelizer</name>
  <version>0.2.0</version>
  <description>
    Subscribes to a PointCloud2 stream (e.g. /hesai/pandar), the
    localisation pose (/pcl_pose) and the static map (/initial_map),
    transforms the scan into the map frame, voxel-grid downsamples it
    (PCL VoxelGrid), subtracts static-map voxels (Chebyshev neighbourhood
    lookup in an unordered_set), and publishes the remaining foreground
    voxels.  All numeric parameters are tunable live via ros2 param set.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <build_depend>libpcl-dev</build_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
